--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -102,6 +102,10 @@
     "your_estate": "당신의 재산",
     "your_parcel": "당신의 토지"
   },
+  "auction": {
+    "description": "12 월 10 일 LAND 경매에 참가하여 LAND을 구입하십시오!",
+    "title": "Decentraland LAND 경매"
+  },
   "auction_finished": {
     "cta": "마켓 플레이스로 이동",
     "description": "참여해 주셔서 감사합니다.",
@@ -125,7 +129,6 @@
     "processing_tx": "거래 처리 중",
     "submit": "발하다",
     "terms_and_conditions": "이용 약관",
-    "title": "NT 옥션",
     "tx_failed": "거래 실패",
     "video_tutorial": "비디오 자습서",
     "watch_tutorial": "비디오 자습서보기",
@@ -154,9 +157,8 @@
   },
   "auction_splash": {
     "cta": "보내다",
-    "cta_title": "귀하의 메일을 입력하고 우리가 알게 해줄거야!",
-    "description": "12 월 10 일 LAND 경매에 참가하여 LAND을 받으십시오!",
-    "title": "Decentraland 경매 V2"
+    "cta_title": "귀하의 메일을 입력하면 알려드립니다.",
+    "subscribed": "이미 구독 중입니다."
   },
   "authorization": {
     "allow": "{contract_link}이 {symbol}을 대신하여 작동하도록 승인합니다.",
