--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -153,9 +153,10 @@
     "video_tutorial": "ビデオチュートリアル"
   },
   "auction_splash": {
+    "already_subscribed": "あなたはすでに加入しています",
     "cta": "送信する",
     "cta_title": "あなたのメールを入力し、私たちに知らせてください！",
-    "subscribed": "あなたはすでに加入しています"
+    "subscribed": "うまく購読しました！"
   },
   "authorization": {
     "allow": "{contract_link}に準じて{symbol}を操作することを許可する",
@@ -289,9 +290,9 @@
     "retry": "やり直す",
     "revoke": "取り消す",
     "sale": "販売",
+    "seconds": "秒",
     "see_less": "もっと見る",
     "see_more": "続きを見る",
-    "seconds": "秒",
     "service_unavailable": "サービスは利用できません",
     "settings": "設定",
     "sign_in": "サインイン",
