--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -102,6 +102,18 @@
     "your_estate": "당신의 재산",
     "your_parcel": "당신의 토지"
   },
+  "auction": {
+    "description": "12 월 10 일 LAND 경매에 참가하여 LAND을 구입하십시오!",
+    "title": "Decentraland LAND 경매"
+  },
+  "auction_finished": {
+    "cta": "마켓 플레이스로 이동",
+    "description": "참여해 주셔서 감사합니다.",
+    "land_sold": "판매 된 판매량",
+    "mana_burned": "마나 불타",
+    "stats_title": "다음은 몇 가지 통계입니다.",
+    "title": "경매 완료"
+  },
   "auction_modal": {
     "authorization": "권한 부여",
     "authorization_description":
@@ -117,7 +129,6 @@
     "processing_tx": "거래 처리 중",
     "submit": "발하다",
     "terms_and_conditions": "이용 약관",
-    "title": "NT 옥션",
     "tx_failed": "거래 실패",
     "video_tutorial": "비디오 자습서",
     "watch_tutorial": "비디오 자습서보기",
@@ -143,6 +154,12 @@
     "token_tooltip": "LAND과 함께 구입할 토큰을 선택하십시오.",
     "total_price": "총 가격",
     "video_tutorial": "비디오 자습서"
+  },
+  "auction_splash": {
+    "already_subscribed": "이미 구독 중입니다.",
+    "cta": "보내다",
+    "cta_title": "귀하의 메일을 입력하면 알려드립니다.",
+    "subscribed": "성공적으로 구독했습니다."
   },
   "authorization": {
     "allow": "{contract_link}이 {symbol}을 대신하여 작동하도록 승인합니다.",
@@ -245,16 +262,23 @@
     "continue": "잇다",
     "contributions": "공헌",
     "created_at": "만든 {date}",
+    "day": "일",
+    "days": "일",
+    "duration": "지속",
     "edit": "편집하다",
+    "email": "mail@domain.com",
     "estate": "재산",
     "estates": "부동산",
     "expired_at": "만료 됨 {time}",
     "expires_in": "만료 {time}",
     "expires_in_more_than_years": "{years} 년 이상 만료 됨",
     "for": "에 대한",
+    "hours": "시간",
     "land": "LAND",
+    "learn_more": "더 알아보기",
     "loading": "로드 중",
     "marketplace": "시장",
+    "minutes": "의사록",
     "mortgage": "저당",
     "mortgages": "모기지",
     "own_address_warning": "그것은 당신의 자신의 주소입니다!",
@@ -271,6 +295,7 @@
     "retry": "다시 해 보다",
     "revoke": "취소",
     "sale": "판매",
+    "seconds": "초",
     "see_less": "적은 것을보십시오",
     "see_more": "더보기",
     "service_unavailable": "서비스를 사용할 수 없음",
@@ -317,7 +342,6 @@
     "cancel": "모기지 취소",
     "claim": "소유권 주장 소포",
     "defaulted_in": "태만",
-    "duration": "지속",
     "duration_placeholder": "기간 (일)",
     "errors": {
       "amount_minimum": "금액은 {amount}보다 커야합니다.",
