--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -103,6 +103,19 @@
     "your_estate": "Su propiedad",
     "your_parcel": "Tu parcela"
   },
+  "auction": {
+    "description":
+      "¡Participe en la subasta de LAND el 10 de diciembre y compre LAND!",
+    "title": "Subasta Decentraland LAND"
+  },
+  "auction_finished": {
+    "cta": "Ir al mercado",
+    "description": "Gracias por participar.",
+    "land_sold": "LAND vendido",
+    "mana_burned": "Mana quemada",
+    "stats_title": "Aquí hay algunas estadísticas:",
+    "title": "Subasta terminada"
+  },
   "auction_modal": {
     "authorization": "Autorización",
     "authorization_description":
@@ -118,7 +131,6 @@
     "processing_tx": "Procesando Transacción",
     "submit": "Proceder",
     "terms_and_conditions": "Términos y Condiciones",
-    "title": "Decentraland Subasta",
     "tx_failed": "Transacción fallida",
     "video_tutorial": "Video Tutorial",
     "watch_tutorial": "Ver video tutorial",
@@ -146,6 +158,12 @@
     "token_tooltip": "Seleccione el token con el que desea comprar LAND",
     "total_price": "Precio total",
     "video_tutorial": "video tutorial"
+  },
+  "auction_splash": {
+    "already_subscribed": "Usted ya está suscrito",
+    "cta": "enviar",
+    "cta_title": "¡Ingresa tu correo y te avisaremos!",
+    "subscribed": "¡Suscrito con éxito!"
   },
   "authorization": {
     "allow": "Autorice al {contract_link} a operar {symbol} en su nombre",
@@ -248,16 +266,23 @@
     "continue": "Continuar",
     "contributions": "Contribuciones",
     "created_at": "Creado en {date}",
+    "day": "día",
+    "days": "dias",
+    "duration": "Duración",
     "edit": "Editar",
+    "email": "mail@domain.com",
     "estate": "Propiedad",
     "estates": "Propiedades",
     "expired_at": "Caducado {time}",
     "expires_in": "Caduca {time}",
     "expires_in_more_than_years": "Caduca en más de {years} años",
     "for": "para",
+    "hours": "horas",
     "land": "LAND",
+    "learn_more": "aprende más",
     "loading": "Cargando",
     "marketplace": "Mercado",
+    "minutes": "minutos",
     "mortgage": "Hipoteca",
     "mortgages": "Hipotecas",
     "own_address_warning": "Esa es tu propia dirección!",
@@ -274,6 +299,7 @@
     "retry": "Reintentar",
     "revoke": "Revocar",
     "sale": "Venta",
+    "seconds": "segundos",
     "see_less": "Ver menos",
     "see_more": "Ver más",
     "service_unavailable": "Servicio no disponible",
@@ -321,7 +347,6 @@
     "cancel": "Cancelar hipoteca",
     "claim": "Reclamo de paquete",
     "defaulted_in": "Default",
-    "duration": "Duración",
     "duration_placeholder": "Duración en días",
     "errors": {
       "amount_minimum": "La cantidad debe ser mayor que {amount}",
