--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -95,6 +95,18 @@
     "your_estate": "您的连块土地",
     "your_parcel": "您的地块"
   },
+  "auction": {
+    "description": "参加12月10日的LAND拍卖并购买LAND！",
+    "title": "Decentraland LAND拍卖"
+  },
+  "auction_finished": {
+    "cta": "去市场",
+    "description": "感谢您的参与。",
+    "land_sold": "LAND已售出",
+    "mana_burned": "玛娜烧了",
+    "stats_title": "以下是一些统计数据：",
+    "title": "拍卖完成"
+  },
   "auction_modal": {
     "authorization": "授权",
     "authorization_description":
@@ -108,7 +120,6 @@
     "processing_tx": "处理交易",
     "submit": "继续",
     "terms_and_conditions": "条款和条件",
-    "title": "Decentraland拍卖",
     "tx_failed": "交易失败",
     "video_tutorial": "视频教程",
     "watch_tutorial": "观看视频教程",
@@ -134,6 +145,12 @@
     "token_tooltip": "选择要购买的令牌LAND",
     "total_price": "总价",
     "video_tutorial": "视频教程"
+  },
+  "auction_splash": {
+    "already_subscribed": "你已经订阅了",
+    "cta": "发送",
+    "cta_title": "输入您的邮件，我们会通知您！",
+    "subscribed": "订阅成功！"
   },
   "authorization": {
     "allow": "授权 {contract_link} 使用 {symbol}",
@@ -231,16 +248,23 @@
     "continue": "继续",
     "contributions": "小区份额",
     "created_at": "创建于 {date}",
+    "day": "天",
+    "days": "天",
+    "duration": "持续时间",
     "edit": "编辑",
+    "email": "mail@domain.com",
     "estate": "连块土地",
     "estates": "连块土地",
     "expired_at": "截止时间 {time}",
     "expires_in": "到期时间 {time}",
     "expires_in_more_than_years": "{years} 年以上到期",
     "for": "对于",
+    "hours": "小时",
     "land": "LAND",
+    "learn_more": "学到更多",
     "loading": "载入中",
     "marketplace": "虚拟物品市场",
+    "minutes": "分钟",
     "mortgage": "抵押贷款",
     "mortgages": "抵押贷款",
     "own_address_warning": "那是您自己的地址！",
@@ -257,6 +281,7 @@
     "retry": "重试",
     "revoke": "撤消",
     "sale": "拍卖",
+    "seconds": "秒",
     "see_less": "少见",
     "see_more": "看更多",
     "service_unavailable": "暂停服务",
@@ -303,7 +328,6 @@
     "cancel": "取消抵押",
     "claim": "认领土地",
     "defaulted_in": "默认",
-    "duration": "持续时间",
     "duration_placeholder": "持续时间以天计",
     "errors": {
       "amount_minimum": "金额应该大于 {amount}",
