--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -133,8 +133,7 @@
     "terms_and_conditions": "Términos y Condiciones",
     "tx_failed": "Transacción fallida",
     "video_tutorial": "Video Tutorial",
-    "watch_tutorial": "Ver video tutorial",
-    "welcome": "Bienvenido a la subasta Decentraland LAND!"
+    "watch_tutorial": "Ver video tutorial"
   },
   "auction_page": {
     "available_parcels": "parcelas disponibles",
