--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -135,8 +135,7 @@
     "terms_and_conditions": "Termes et conditions",
     "tx_failed": "La transaction a échoué",
     "video_tutorial": "Didacticiel vidéo",
-    "watch_tutorial": "Regarder le tutoriel vidéo",
-    "welcome": "Bienvenue à la vente aux enchères Decentraland LAND!"
+    "watch_tutorial": "Regarder le tutoriel vidéo"
   },
   "auction_page": {
     "available_parcels": "colis disponibles",
