--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -128,8 +128,7 @@
     "terms_and_conditions": "利用規約",
     "tx_failed": "処理に失敗しました",
     "video_tutorial": "ビデオチュートリアル",
-    "watch_tutorial": "ビデオチュートリアルを見る",
-    "welcome": "Decentraland LANDオークションへようこそ！"
+    "watch_tutorial": "ビデオチュートリアルを見る"
   },
   "auction_page": {
     "available_parcels": "販売中の区画",
