--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -122,8 +122,7 @@
     "terms_and_conditions": "条款和条件",
     "tx_failed": "交易失败",
     "video_tutorial": "视频教程",
-    "watch_tutorial": "观看视频教程",
-    "welcome": "欢迎来到Decentraland LAND拍卖！"
+    "watch_tutorial": "观看视频教程"
   },
   "auction_page": {
     "available_parcels": "可用包裹",
