use MANA instead of  Mana

--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -101,7 +101,7 @@
     "cta": "转到虚拟市场",
     "description": "感谢您的参与。",
     "land_sold": "LAND 已售出",
-    "mana_burned": "Mana 已销毁",
+    "mana_burned": "MANA 已销毁",
     "stats_title": "一些统计数据：",
     "title": "拍卖已结束"
   },
