--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -114,17 +114,17 @@
   "auction_modal": {
     "authorization": "承認",
     "authorization_description":
-      "{token}を使用してオークションでLANDを購入するには、まず{contract_link}契約でトークン使用を承認する必要があります",
+      "{token}を使用してLANDを購入するには、まず{contract_link}契約でトークンの使用を承認する必要があります。",
     "authorize_token": "{token}トークンを承認する",
     "confirmation": "確認",
     "confirmation_description":
-      "{parcels} LANDを{price} {token}で購入しようとしています",
+      "{parcels}LANDを{price} {token}で購入しようとしています",
     "description":
-      "始める前に次の2点を確認してください。まずLAND（土地）購入に使用するトークンを選択します。次にそのトークンがLAND購入に使用できるようにスマートコントラクトで承認してください。",
+      "始める前に次の2点を確認してください。LAND（土地）購入に使用するトークンを選択できます。そのトークンがLAND購入に使用できるようにスマートコントラクトで承認してください。",
     "get_started": "始める",
     "i_agree_with_terms": "{terms_link}に同意する",
-    "processing_tx": "取引の処理",
-    "submit": "続行する",
+    "processing_tx": "取引処理中",
+    "submit": "続ける",
     "terms_and_conditions": "利用規約",
     "tx_failed": "処理に失敗しました",
     "video_tutorial": "ビデオチュートリアル",
@@ -133,15 +133,15 @@
   "auction_page": {
     "available_parcels": "販売中の区画",
     "bid": "購入",
-    "description": "購入したい土地を選んで下さい",
-    "empty_message": "購入したい土地を選んでカートに追加",
-    "find_available_parcel": "利用可能な区画を表示",
+    "description": "購入したいLAND(土地)を選んで下さい",
+    "empty_message": "購入したい土地を選んでカートに追加します。 詳しい参加方法を{video_tutorial_link}動画で観る",
+    "find_available_parcel": "購入可能な区画を表示",
     "gas_price": "ガス価格",
-    "land_price": "LAND価格",
+    "land_price": "LAND単価",
     "maximum_parcels_message":
       "単一のトランザクションで{max}LAND以上を購入しようとすると失敗します。",
     "maximum_parcels_title": "1トランザクションあたり最大LANDに達しました",
-    "parcels": "区画",
+    "parcels": "区画数",
     "parcels_tooltip": "一度に購入できるのは{max}区画までです",
     "searching": "検索中...",
     "sold": "売却済",
@@ -232,7 +232,7 @@
     "color_key": "カラーガイド",
     "copyright": "© 2018 Decentraland. All rights reserved.",
     "mini_copyright": "© 2018 Decentraland.",
-    "privacy_policy": "プライバシーポリシー",
+    "privacy_policy": "個人情報保護方針",
     "terms": "利用規約"
   },
   "global": {
@@ -266,7 +266,7 @@
     "expired_at": "{time}に締切済み",
     "expires_in": "締切：{time}",
     "expires_in_more_than_years": "締切まであと{years}年以上",
-    "for": "for",
+    "for": " ",
     "hours": "時間",
     "land": "LAND",
     "learn_more": "もっと詳しく知る",
@@ -281,7 +281,7 @@
     "owner_address_warning": "このアドレスはすでに所有者に指定されています",
     "paid_at": "支払済み",
     "parcels": "パーセル(区画)",
-    "profile": "プロフィール",
+    "profile": "マイLAND",
     "publications": "公開中の区画",
     "recipient_address": "受信者アドレス",
     "remove": "削除する",
@@ -296,7 +296,7 @@
     "settings": "設定",
     "sign_in": "サインイン",
     "sign_in_notice":
-      "アクセスするにはこちらで{sign_in_link}する必要があります",
+      "アクセスするには{sign_in_link}する必要があります",
     "submit": "送信",
     "the_estate": "エステート",
     "the_parcel": "区画",
@@ -446,21 +446,21 @@
   "sign_in": {
     "account_unlocked": "アカウントがアンロックされているか確認してください",
     "get_started": "始める",
-    "intro": "まず始めにあなたのLAND(土地)を安全に保管する環境を整えてください",
+    "intro": "まず始めにあなたのLAND(土地)を安全に保管する環境を用意して下さい。",
     "options": {
       "desktop":
-        "{metamask_link}の拡張機能や{ledger_nano_link}などのハードウェアウォレットを使用できます",
+        "{metamask_link}拡張機能や{ledger_nano_link}などのハードウェアウォレットが使用できます。",
       "mobile":
-        "{coinbase_link}や{imtoken_link}などのモバイルブラウザも使用することができます"
+        "{coinbase_link}や{imtoken_link}などのモバイルブラウザも使用することができます。"
     }
   },
   "terms_modal": {
     "also_agree":
-      "また、お客様の情報をどのように処理するのかについて記述している{privacy_policy_link}に同意するものとします。",
+      "また個人情報を扱いに関する{privacy_policy_link}に同意するものとします。",
     "by_agreeing":
-      "下記の \"同意する\"を選択することにより、{terms_of_service_link}に同意したことになります。",
+      "下記の\"同意する\"を選択することにより、{terms_of_service_link}に同意したことになります。",
     "explanation":
-      "このdAppは、Ethereumブロックチェーン上で実行される分散型取引所と同期しています。",
+      "このdAppはEthereumブロックチェーン上で実行される分散型取引所と同期しています。",
     "i_agree": "同意する",
     "privacy_policy": "個人情報保護方針",
     "terms_of_service": "利用規約",
